# kafka-client

./: .gitignore  .travis.yml  Cargo.toml  NOTES.md  README.md  TODO.md  run-kafka.sh
examples/: console-consumer.rs  console-producer.rs  example-consume.rs  example-fetch.rs  example-produce.rs  example-ssl.rs  offset-monitor.rs  topic-metadata.rs
src/: client_internals.rs  codecs.rs  error.rs  lib.rs  producer.rs
src/client/: accumulator.rs  metadata.rs  mod.rs  network.rs  state.rs
src/compression/: gzip.rs  snappy.rs
src/consumer/: builder.rs  mod.rs  state.rs
src/protocol/: consumer.rs  fetch.rs  metadata.rs  mod.rs  offset.rs  produce.rs  zreader.rs
tests/: run-all-tests  test_kafka.rs
tests/integration/client/: mod.rs
tests/integration/consumer_producer/: consumer.rs  mod.rs  producer.rs
