[package]
name = "kafka-rust"
version = "0.8.0"
authors = ["Zack Loebel-Begelman", "Evan Simmons"]
description = "Rust client for Apache Kafka"
homepage = "https://github.com/advection/kafka-rust"
repository = "https://github.com/advection/kafka-rust"
documentation = "https://docs.rs/kafka/"
readme = "README.md"
keywords = ["kafka", "queue"]
license = "MIT"
edition = "2018"


[dependencies]
byteorder = "1.3.2"
crc = "1.8.1"
log = "0.4.8"
fnv = "1.0.6"
twox-hash = "1.5.0"
failure = "0.1.5"
flate2 = { version = "1.0.11", optional = true }
snap = { version = "0.2.5", optional = true }
rustls = {version = "0.16.0", optional = true }
webpki = "0.21.0"
webpki-roots = "0.17.0"
tokio = { version = "0.2", features = ["full"] }
tokio-rustls = { version = "0.12.1", optional = true}

[dev-dependencies]
getopts = "0.2.21"
env_logger = "0.6.2"
time = "0.1.42"
rand = "0.7.0"


[features]
default = ["snappy", "gzip", "security"]
snappy = ["snap"]
gzip = ["flate2"]
security = ["rustls", "tokio-rustls"]
nightly = []
integration_tests = []
